
This file shows the changes in recent releases of MODx. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- [#313] Fix header error with binary modStaticResource downloads
- [#206] Fix session bug with opcode caching systems like APC, WinCache, eAccelerator
- [#2846] Add tag syntax to description hover text for resource fields
- [#2849] Add ability to drag/drop onto TV fields
- [#2848] Fix issue with file edit and base paths
- [#2802] Ensure Category tab is hidden when all TVs are hidden in that Category
- [#2779] Added Content Editor policy to default list of policies
- [#2819] Fix bug in FC rules where parent constraint was not traversing up tree to inherit parents
- [#2744] Fix bug with empty template and TV values
- [#2841] Fix bug with File Edit page and modFileHandler reference
- [#2839] Fix bug with failed login count not being updated
- Add ability to view permissions inherited when viewing an ACL row in a grid
- [#2834] Fix issue where constraint class was not set on new FC rules
- [#2819] Fix issue with FC rules and execution order due to setting default templates, constraints
- [#2830] Permit ability to change FC Set Template when editing a FC Set
- [#2827] Fix issues related to FC upgrade with Rules with comma-separated names, differing constraints, and template setting
- Fix issue related to #2625 with deferred tabpanel rendering that caused unpublishing when using Quick Update/Create
- [#2825] Append idx to each item DOM id when using HTML tag tv output widget
- [#2823] Add missing lexicon entry for TV output type
- [#2817] Reorder System top menu for easier navigation
- [#2820] Add DOM id to Profile page tabs
- [#2814] Add longtitle, description, template to Quick Update/Create
- [#2789] Add check to make sure safe_mode is off in setup
- [#2565] Improve Quick Create/Update Resource to move settings into tab rather than fieldset