@@ -24,7 +24,8 @@ $combo = $modx->getOption('combo',$scriptProperties,false);
 /* query templates */
 $c = $modx->newQuery('modTemplate');
 $c->leftJoin('modCategory','Category');
-$c->select(array('modTemplate.*','Category.category'));
+$c->select($modx->getSelectColumns('modTemplate', 'modTemplate', 'modTemplate_'));
+$c->select(array('catname' => 'Category.category'));
 
 $c->sortby($sort,$dir);
 if ($isLimit) $c->limit($limit,$start);
@@ -45,14 +46,14 @@ if ($combo) {
         'content' => '',
         'locked' => false,
     );
-    $empty['category'] = '';
+    $empty['catname'] = '';
     $list[] = $empty;
 }
 foreach ($templates as $template) {
     if (!$template->checkPolicy('list')) continue;
     
     $templateArray = $template->toArray();
-    $templateArray['category'] = $template->get('category') != null ? $template->get('category') : '';
+    $templateArray['category'] = $template->get('catname') != null ? $template->get('catname') : '';
     unset($templateArray['content']);
     $list[] = $templateArray;
 }
